apps/hello-world/k8s/manifests.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  labels:
    app.kubernetes.io/name: hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: hello-world
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hello-world
    spec:
      containers:
        - name: app
          image: nginxdemos/hello:0.4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: '10m'
              memory: '32Mi'
            limits:
              cpu: '100m'
              memory: '64Mi'
          livenessProbe:
            httpGet:
              path: /
              port: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80

---
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  labels:
    app.kubernetes.io/name: hello-world
  annotations:
    tailscale.com/expose: 'true'
    tailscale.com/hostname: hello-world
spec:
  selector:
    app.kubernetes.io/name: hello-world
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
