apps/hello-world/k8s/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hello-world
  labels:
    app.kubernetes.io/name: hello-world
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`hello-world.inevitable.fyi`)"
      kind: Rule
      services:
        - name: hello-world
          port: 80
  tls:
    secretName: hello-world-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hello-world-http
  labels:
    app.kubernetes.io/name: hello-world
spec:
  entryPoints:
    - web
  routes:
    - match: "Host(`hello-world.inevitable.fyi`)"
      kind: Rule
      middlewares:
        - name: redirect-https
      services:
        - name: hello-world
          port: 80
